[package]
name = "bitsong-rs"
version = "0.0.1"
authors = ["Hard-nett"]
license = "Apache-2.0"
repository = "https://github.com/bitsongofficial/rs-bitsong/tree/main/bitsong-rs"
description = "Transaction builder and signer for Bitsong, in rust!"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "encoding"]
keywords = ["blockchain", "cosmos", "tendermint", "transaction"]
edition = "2021"
rust-version = "1.72"

[dependencies]
rs-bitsong-proto = { path = "../rs-bitsong-proto", default-features = false }
cosmos-sdk-proto = { version = "0.28.0", default-features = false,features = ["std"], git = "https://github.com/permissionlessweb/cosmos-rust" }
ecdsa = "0.16"
eyre = "0.6"
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "sha256"] }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
signature = { version = "2", features = ["std"] }
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
tendermint = { version = "0.40.0", features = ["secp256k1"],  git = "https://github.com/permissionlessweb/tendermint-rs" }
thiserror = "1"

# optional dependencies
bip32 = { version = "0.5", optional = true, default-features = false, features = ["alloc", "secp256k1"] }
tendermint-rpc = { version = "0.40.0", optional = true, features = ["http-client"], git = "https://github.com/permissionlessweb/tendermint-rs" }
tokio = { version = "1", optional = true }

[dev-dependencies]
hex-literal = "0.4"

[features]
default   = ["bip32", "getrandom"]
cosmwasm  = ["cosmos-sdk-proto/cosmwasm"]
dev       = ["rpc", "tokio"]
getrandom = ["rand_core/getrandom"]
grpc      = ["cosmos-sdk-proto/grpc-transport", "grpc-core"]
grpc-core = ["cosmos-sdk-proto/grpc"]
rpc       = ["tendermint-rpc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
