[package]
name = "bitsong-rs"
version = "0.0.1"
authors = ["A Hardnett <hardnettt@proton.me>"]
license = "Apache-2.0"
repository = "https://github.com/bitsongofficial/rs-bitsong/tree/main/bitsong-rs"
description = "Transaction builder and signer for Bitsong, in Rust!"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "encoding"]
keywords = ["blockchain", "cosmos", "tendermint", "transaction"]
edition = "2021"
rust-version = "1.72"

[dependencies]
rs-bitsong-proto = { path = "../rs-bitsong-proto", default-features = false, features = ["std"] }
tendermint = { version = "0.40.0", features = ["secp256k1"],  git = "https://github.com/permissionlessweb/tendermint-rs" }
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"

# optional dependencies
bip32 = { version = "0.5", optional = true, default-features = false, features = ["alloc", "secp256k1"] }
tokio = { version = "1", optional = true }

[dev-dependencies]

[features]
default   = ["bip32"]
cosmwasm  = ["rs-bitsong-proto/cosmwasm"]
dev       = ["tokio"]
grpc      = ["rs-bitsong-proto/grpc-transport", "grpc-core"]
grpc-core = ["rs-bitsong-proto/grpc"]
# rpc       = ["tendermint-rpc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
