[package]
name = "rs-bitsong-proto"
version = "0.27.0"
authors = [
   
]
license = "Apache-2.0"
repository = "https://github.com/cosmos/cosmos-rust/tree/main/cosmos-sdk-proto"
description = "Protobuf stuct defintions for interacting with Bitsong"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords = ["blockchain", "cosmos", "tendermint", "proto"]
edition = "2021"
rust-version = "1.75"

[dependencies]
chrono = {version = "0.4.27", default-features = false}
prost = {version = "0.14.1", default-features = false, features = ["derive"]}
prost-types = {version = "0.14.1", default-features = false}
tendermint-proto = { version = "0.40.4", git = "https://github.com/permissionlessweb/tendermint-rs" }
cosmos-sdk-proto = { version = "0.28.0", default-features = false, git = "https://github.com/permissionlessweb/cosmos-rust" }
cosmwasm-std = {version = "3.0.1", features = ["stargate"]}
rs-bitsong-derive = {version = "0.0.1", path = "../rs-bitsong-derive"}
schemars = "1.0.4"
http-body-util = "0.1.3"
bytes = "1.0" 

# for query
serde = {version = "1.0", default-features = false, features = ["derive"]}

# to implement From trait for common used client library
layer-climb-proto = "0.7.3"


# Optional dependencies
tonic = { version = "0.14.1", optional = true, default-features = false, features = ["codegen"] }
tonic-prost = { version = "0.14.1", optional = true, default-features = false }
pbjson = { package = "informalsystems-pbjson", optional = true, default-features = false, version = "0.7" }
serde-cw-value = "0.7.0"

[features]
default = ["grpc-transport"]
std = ["prost/std", "tendermint-proto/std", "cosmos-sdk-proto/std"]
grpc = ["std", "tonic","tonic-prost"]
grpc-transport = ["grpc", "tonic/transport"]
cosmwasm = []
# serde = ["dep:serde", "pbjson", "cosmos-sdk-proto/serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
