[package]
name = "rs-bitsong-proto"
version = "0.0.1"
authors = ["A Hardnett <hardnettt@proton.me>"]
license = "Apache-2.0"
repository = "https://github.com/bitsongofficial/rs-bitsong/tree/main/rs-bitsong-proto"
description = "Protobuf stuct defintions for interacting with Bitsong"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords = ["blockchain", "cosmos", "tendermint", "proto"]
edition = "2021"
rust-version = "1.75"

[dependencies]
chrono = {version = "0.4.27", default-features = false}
prost = {version = "0.14.1", default-features = false, features = ["derive"]}
prost-types = {version = "0.14.1", default-features = false}
tendermint-proto = { version = "0.40.4", git = "https://github.com/permissionlessweb/tendermint-rs" }
cosmwasm-std = {version = "3.0.1", features = ["stargate"]}
rs-bitsong-derive = {version = "0.0.1", path = "../rs-bitsong-derive"}
schemars = "1.0.4"

# for query
serde = {version = "1.0", default-features = false, features = ["derive"]}
serde-cw-value = "0.7.0"

# to implement From trait for common used client library
layer-climb-proto = "0.7.3"


# Optional dependencies
tonic = { version = "0.14.1", optional = true, default-features = false, features = ["codegen"] }
tonic-prost = { version = "0.14.1", optional = true, default-features = false }

[features]
default = ["grpc-transport"]
std = ["prost/std", "tendermint-proto/std"]
grpc = ["std", "tonic","tonic-prost"]
grpc-transport = ["grpc", "tonic/transport"]
cosmwasm = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
