[package]
name = "rs-bitsong-sdk"
version = "0.27.0"
authors = [
   
]
license = "Apache-2.0"
repository = "https://github.com/cosmos/cosmos-rust/tree/main/cosmos-sdk-proto"
description = "Protobuf stuct defintions for interacting with Bitsong"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords = ["blockchain", "cosmos", "tendermint", "proto"]
edition = "2021"
rust-version = "1.75"

[dependencies]
prost = { version = "0.13", default-features = false }
tendermint-proto = { version = "0.40.0" }

# Optional dependencies
tonic = { version = "0.13", optional = true, default-features = false, features = ["codegen", "prost"] }
serde = { version = "1.0.203", optional = true, default-features = false, features = ["alloc"] }
pbjson = { package = "informalsystems-pbjson", optional = true, default-features = false, version = "0.7" }

[features]
default = ["grpc-transport"]
std = ["prost/std", "tendermint-proto/std"]
grpc = ["std", "tonic"]
grpc-transport = ["grpc", "tonic/transport"]
cosmwasm = []
serde = ["dep:serde", "pbjson"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]